update: handlers & docs for them
